# simplest-computing-language-benchmark

./: .gitignore  README.md  pyproject.toml
simplest_computing_language_benchmark/benchmarks/: base_benchmark.py  go_benchmark.py  java_benchmark.py  nodejs_benchmark.py  python_benchmark.py
simplest_computing_language_benchmark/core/: benchmark_suite.py  system_info.py
simplest_computing_language_benchmark/templates/: go_template.py  java_template.py  nodejs_template.py
