[tool.poetry]
name = "simplest_computing_language_benchmark"
version = "0.1.0"
description = "Simple benchmarks comparing Python, Java, Node.js, Go and others performance"
authors = ["Nestor Urquiza <nestor.urquiza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-benchmark = "simplest_computing_language_benchmark.core.benchmark_suite:main"
